--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="stilark.css">
 </head>
 <body>
+     <nav>
+
+            <img id="logo" src="bilde/logo1.png" alt=""
+             >
+            <!-- <figcaption> tiekst under bilde</figcaption> -->
+        <div>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+    </nav>
     <h1>Velkommen!</h1>
     <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, mollitia animi quos quaerat sit repudiandae facere, quasi sint ex exercitationem suscipit quis, ea dicta beatae et omnis aliquam ut ab.
