--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lrgb(199, 199, 199)
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,13 @@
 <body>
      <nav>
 
-            <img id="logo" src="bilde/logo1.png" alt=""
-             >
-            <!-- <figcaption> tiekst under bilde</figcaption> -->
         <div>
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
         </div>
     </nav>
-    <h1>Velkommen!</h1>
+    <h1>Carma</h1>
     <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, mollitia animi quos quaerat sit repudiandae facere, quasi sint ex exercitationem suscipit quis, ea dicta beatae et omnis aliquam ut ab.
     </p>
